compiler/acton/test/syntaxerrors/err40.act
# Unexpected token after valid statement
def unexpected():
    x = 5 ]